# sheer

./: .gitignore  Makefile  PR_DESCRIPTION.md  TESTING.md  conf.py  docker-compose.test.yml  index.rst  make.bat  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg
sheer/: cli.py  django_urls.py  indexer.py  query.py  server.py  shortstack_ext.py  test_filters.py  test_indexing.py  utility.py  views.py  wsgi.py
sheer/processors/: filesystem.py  helpers.py
tests/integration/: conftest.py  test_elasticsearch_integration.py  test_opensearch_integration.py
tests/integration/test_data/_posts/: test-post-1.md  test-post-2.md  test-post-3.md
tests/integration/test_data/_queries/: posts.json
tests/integration/test_data/_settings/: lookups.json  posts_mappings.json  processors.json  settings.json
