[metadata]
name = sheer
author = CFPB
author-email = tech@consumerfinance.gov
summary = Sheer is a tool for loading arbitrary content into elasticsearch and
    serving that content on the web
description-file = README.md
license = Public Domain (CC 0)
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
[files]
packages =
    sheer
[entry_points]
console_scripts =
    sheer = sheer.cli:run_cli
